[package]
name = "png_inflate"
version = "2019.10.10"
authors = [
    "Raymond Dodge <git@rayrobdod.name>"
]
publish = false
description = "A filter that decompresses a png image's internal data structures"
repository = "https://github.com/rayrobdod/png-inflate"
homepage = "https://rayrobdod.name/programming/programs/pngInflate/"
license = "Apache-2.0"
readme = "README.md"

[profile.release]
lto = true

[[bin]]
name = "png_inflate"
path = "src/inflate.rs"

[dependencies]
