[package]
name = "png_inflate"
version = "0.0.0-SNAPSHOT"
authors = [
    "Raymond Dodge <git@rayrobdod.name>"
]
edition = "2018"
publish = false
description = "A filter that decompresses a png image's internal data structures"
repository = "https://github.com/rayrobdod/png-inflate"
homepage = "https://rayrobdod.name/programming/programs/pngInflate/"
license = "Apache-2.0"
readme = "README.md"

[profile.release]
lto = true

[[bin]]
name = "png_inflate"
path = "src/inflate.rs"

[dependencies]
atomicwrites = "0.3.*"

[dev-dependencies]
tempfile = "3.*"
png_inflate_derive = {path = "lib/png_inflate_derive"}
